chore: updated deps

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: anymex
 description: "An Anilist Client"
 publish_to: "GitHub"
-version: 2.8.6
+version: 2.9.0
 
 environment:
   sdk: ">=3.4.4 <4.0.0"
@@ -59,6 +59,10 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   blur: ^4.0.0
   file_picker: ^8.1.7
+  algorithmic: ^0.0.11
+  flutter_dotenv: ^5.2.1
+  kenburns_nullsafety: ^1.0.1
+  flutter_markdown: ^0.7.6
 
 dev_dependencies:
   flutter_test:
@@ -88,6 +92,7 @@ flutter:
 
   assets:
     - assets/images/logo_transparent.png
+    - .env
 
   fonts:
     - family: Poppins
