--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-     "name": "AnymeX β",
-     "short_name": "AnymeX β",
+     "name": "AnymeX",
+     "short_name": "AnymeX",
      "start_url": ".",
      "display": "standalone",
      "background_color": "#0175C2",
