--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.ryan.anymex">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -5,27 +6,47 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
+    <!-- android:banner="@drawable/tv_banner" -->
+    <!-- TV app permissions and features -->
+    <uses-feature android:name="android.software.leanback" android:required="false" />
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
-    <application android:label="AnymeX" android:name="${applicationName}" android:roundIcon="@mipmap/ic_rounded_launcher" android:icon="@mipmap/ic_launcher" android:requestLegacyExternalStorage="true" android:enableOnBackInvokedCallback="true">
+    <application android:label="AnymeX" 
+        android:name="${applicationName}" 
+        android:roundIcon="@mipmap/ic_rounded_launcher" 
+        android:icon="@mipmap/ic_launcher" 
+        android:requestLegacyExternalStorage="true" 
+        android:enableOnBackInvokedCallback="true">
         
-        <activity android:name=".MainActivity" android:exported="true" android:launchMode="singleTop" android:taskAffinity="" android:theme="@style/LaunchTheme" android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" android:hardwareAccelerated="true" android:windowSoftInputMode="adjustResize">
+        <activity android:name=".MainActivity" 
+            android:exported="true" 
+            android:launchMode="singleTop" 
+            android:taskAffinity="" 
+            android:theme="@style/LaunchTheme" 
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode" 
+            android:hardwareAccelerated="true" 
+            android:windowSoftInputMode="adjustResize">
 
-            <meta-data android:name="io.flutter.embedding.android.NormalTheme" android:resource="@style/NormalTheme"/>
+            <meta-data android:name="io.flutter.embedding.android.NormalTheme" 
+                android:resource="@style/NormalTheme"/>
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+                <!-- Add LEANBACK_LAUNCHER for TV -->
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity android:name="com.linusu.flutter_web_auth_2.CallbackActivity" android:exported="true">
-              <intent-filter android:label="flutter_web_auth_2">
+        <activity android:name="com.linusu.flutter_web_auth_2.CallbackActivity" 
+            android:exported="true">
+            <intent-filter android:label="AnymeX">
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data android:scheme="anymex"/>
-              </intent-filter>
-            </activity>
+            </intent-filter>
+        </activity>
 
         <meta-data android:name="flutterEmbedding" android:value="2"/>
         <meta-data android:name="flutter.deeplinking.enabled" android:value="true"/>
@@ -41,17 +62,12 @@
             <action android:name="android.intent.action.VIEW"/>
             <data android:scheme="sms"/>
         </intent>
-
         <intent>
             <action android:name="android.intent.action.VIEW"/>
             <data android:scheme="tel"/>
         </intent>
-
         <intent>
             <action android:name="android.support.customtabs.action.CustomTabsService"/>
         </intent>
-
     </queries>
-
-
 </manifest>
