--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   kenburns_nullsafety: ^1.0.1
   flutter_markdown: ^0.7.6
   device_info_plus: ^11.2.2
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
