--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
-    <!-- android:banner="@drawable/tv_banner" -->
     <!-- TV app permissions and features -->
     <uses-feature android:name="android.software.leanback" android:required="false" />
     <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
@@ -14,7 +13,8 @@
     <application android:label="AnymeX" 
         android:name="${applicationName}" 
         android:roundIcon="@mipmap/ic_rounded_launcher" 
-        android:icon="@mipmap/ic_launcher" 
+        android:icon="@mipmap/ic_launcher"
+        android:banner="@mipmap/tv_banner" 
         android:requestLegacyExternalStorage="true" 
         android:enableOnBackInvokedCallback="true">
         
@@ -42,6 +42,13 @@
             <category android:name="android.intent.category.DEFAULT" />
             <category android:name="android.intent.category.BROWSABLE" />
             <data android:scheme="anymex" android:host="add-repo" />
+        </intent-filter>  
+
+        <intent-filter android:label="Add Repo">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="mangayomi" android:host="add-repo" />
         </intent-filter>  
         
         </activity>
