feat: added unilink support for (ios, mac, windows)

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -26,6 +26,20 @@
 	<string>$(PRODUCT_COPYRIGHT)</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+    	<dict>
+        	<key>CFBundleTypeRole</key>
+        	<string>Editor</string>
+        	<key>CFBundleURLName</key>
+        	<string>com.ryan.anymex</string>
+        	<key>CFBundleURLSchemes</key>
+        <array>
+            <string>anymex</string>
+        </array>
+    </dict>
+	</array>
+
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>NSAppTransportSecurity</key>
