--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -50,5 +50,26 @@
     <true/>
     <key>UIApplicationSupportsIndirectInputEvents</key>
     <true/>
+
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLName</key>
+            <string>anymex</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>anymex</string>
+            </array>
+        </dict>
+        <dict>
+            <key>CFBundleURLName</key>
+            <string>mangayomi</string>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>mangayomi</string>
+            </array>
+        </dict>
+    </array>
+
   </dict>
 </plist>
