--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,10 @@ dependencies:
   flutter_markdown: ^0.7.6
   device_info_plus: ^11.2.2
   uni_links: ^0.5.1
+  uni_links_desktop:
+    git:
+      url: https://github.com/leanflutter/uni_links_desktop.git
+      ref: main
 
 dev_dependencies:
   flutter_test:
