--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -48,7 +48,14 @@
             <action android:name="android.intent.action.VIEW" />
             <category android:name="android.intent.category.DEFAULT" />
             <category android:name="android.intent.category.BROWSABLE" />
-            <data android:scheme="mangayomi" android:host="add-repo" />
+            <data android:scheme="dar" android:host="add-repo" />
+        </intent-filter>  
+
+        <intent-filter android:label="Add Repo">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="sugoireads" android:host="add-repo" />
         </intent-filter>  
         
         </activity>
@@ -59,7 +66,7 @@
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
                 <category android:name="android.intent.category.BROWSABLE"/>
-                <data android:scheme="anymex"/>
+                <data android:scheme="anymex" android:host="callback"/>
             </intent-filter>
         </activity>
 
