--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -57,6 +57,13 @@
             <category android:name="android.intent.category.BROWSABLE" />
             <data android:scheme="sugoireads" android:host="add-repo" />
         </intent-filter>  
+
+        <intent-filter android:label="Add Repo">
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="android.intent.category.DEFAULT" />
+            <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="mangayomi" android:host="add-repo" />
+        </intent-filter>  
         
         </activity>
 
